zsh setopt histignorespace

--- a/zsh/history
+++ b/zsh/history
@@ -4,6 +4,4 @@
 HISTSIZE=5000
 SAVEHIST=5000
 HISTFILE=~/.zsh_history
-
-# looks interesting for later https://github.com/zsh-users/zaw
-# bindkey '^R' zaw-history
+setopt histignorespace
